--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -462,6 +462,7 @@ sharp corners
 
 \chapter{Manifold}
 \input{appendix/2_manifold/1_smooth_manifold.tex}
+\input{appendix/2_manifold/2_smooth_maps.tex}
 \chapter{Complex Analysis}
 \input{appendix/3_complex_analysis/1_holomorphic_function.tex}
 \input{appendix/3_complex_analysis/2_line_integral.tex}
