--- a/appendix/3_complex_analysis/5_residue_theorem.tex
+++ b/appendix/3_complex_analysis/5_residue_theorem.tex
@@ -37,7 +37,9 @@
 }
 
 \Corollary{
-  $f$が恒等的に$0$でないならば$f$の零点集合は離散的である．
+  $f$が恒等的に$0$でないならば$f$の零点集合は離散的
+  \footnote{離散集合とは，孤立点からなる集合のことを言う．}
+  である．
 }{
   $c$を$f$の零点とすれば，$f(z) = (z - c)^{k}g(z),\ g(c) \neq 0$なる$g$がある．
   $g(c) \neq 0$だから$c$の十分小さい近傍$U(c)$をとれば，$U(c)$の任意の点$z$に対して
@@ -46,7 +48,7 @@
 }
 
 \Definition{
-  領域$D$と$D$のりさん部分集合$\{c_{\alpha}\}_{\alpha\in A}$を考える．
+  領域$D$と$D$の離散部分集合$\{c_{\alpha}\}_{\alpha\in A}$を考える．
   $f$は$D\mysetminus \{c_{\alpha}\}_{\alpha\in A}$で正則な関数とする．
   このとき$f$が$D$上の\textbf{有理型関数(meromorphic function)}であるとは，
   各$\alpha$に対して$c_{\alpha}$の近傍$U_{\alpha}$と$U_{\alpha}$で定義された
