寝る必要がある

--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -19,6 +19,7 @@
 \usepackage{makeidx}
 \usepackage{etoolbox}
 \usepackage{footnote}
+\usepackage[all]{xy}
 
 
 
@@ -474,6 +475,8 @@ sharp corners
 \input{appendix/2_manifold/1_smooth_manifold.tex}
 \input{appendix/2_manifold/2_smooth_maps.tex}
 \input{appendix/2_manifold/3_tangent_space.tex}
+\input{appendix/2_manifold/3-1_differential.tex}
+\input{appendix/2_manifold/3-2_vector_bundle.tex}
 
 \chapter{Complex Analysis}
 \input{appendix/3_complex_analysis/1_holomorphic_function.tex}
