--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -472,6 +472,7 @@ sharp corners
 \input{chap2/5-2_projective_schemes.tex}
 \input{chap2/5-3_noetherian_schemes_algebraic_varieties.tex}
 \input{chap2/5-4_reduced_schemes.tex}
+\input{chap2/5-5_irreducible_components.tex}
 
 
 \clearpage
