--- a/appendix/2_manifold/2_smooth_maps.tex
+++ b/appendix/2_manifold/2_smooth_maps.tex
@@ -3,7 +3,7 @@
 
 \Definition{
   $n$次元可微分多様体$M$，$k\in \mathbf{Z}_{> 0}$に対して$f:M\to \mathbf{R}^{k}$
-  が\index{なめらか@なめらか!なかんすう@なかんすう}\index{smooth! function}
+  が\index{なめらか@滑らか!なかんすう@な関数}\index{smooth! function}
   \textbf{滑らかな関数(smooth function)}とは，任意の点$p\in M$に対して，
   それを含む滑らかなチャート$(U,\varphi)$があって
   \begin{equation*}
