--- a/appendix/2_manifold/3-1_differential.tex
+++ b/appendix/2_manifold/3-1_differential.tex
@@ -15,6 +15,18 @@
   なる接ベクトルである．
 }
 
+\Example{
+  $M$を可微分多様体として滑らかな関数$f:M\to \mathbf{R}$の点$p$における
+  微分$df:T_{p}M\to T_{p}\mathbf{R} \cong \mathbf{R}$は
+  \begin{equation*}
+    C^{\infty}_{f(p)}(\mathbf{R}) = 
+  \end{equation*}
+  $X_{p} \in T_{p}M$に対して
+  \begin{equation*}
+    df(X_{p})(g) = X_{p}(f \circ g)
+  \end{equation*}
+}{}
+
 \Remark{
   どの点における微分であるかを明確にするために$dF$の代わりに$dF_{p}$と書くことがある．
 }{}
