--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -497,5 +497,7 @@ sharp corners
 \input{appendix/3_complex_analysis/4_cauchy's_integral_formula.tex}
 \input{appendix/3_complex_analysis/5_residue_theorem.tex}
 \input{appendix/3_complex_analysis/6_several_variables.tex}
-\printindex
+\begin{theindex}
+    \printindex
+\end{theindex}
 \end{document}
